# haray

./: .gitignore  .travis.yml  INSTALL.md  LICENSE  Main.hs  Makefile  README.md  haray.cabal  raytracer.cabal  run-examples.sh  upload-examples.sh
scenes/: example1  example2  example3  example4  example5  example5a  example6  example7  example8  example9  example9a
src/: Main.hs
src/Data/: Bitmap.hs  Camera.hs  HitRecord.hs  Luminaire.hs  OrthoNormalBasis.hs  PNG.hs  RGB.hs  Ray.hs  Scene.hs  Shape.hs  Texture.hs  VectorSpace.hs
src/Graphics/Rendering/Haray/: Bitmap.hs  Camera.hs  HMDInfo.hs  HitRecord.hs  Luminaire.hs  RGB.hs  Ray.hs  Render.hs  Scene.hs  Shape.hs  Shape.hsc  SolidNoise.hs  Texture.hs
