Name:                haray
Version:             0.1
License:             BSD3
License-file:        LICENSE
Author:              Jason Dagit
Maintainer:          dagit@codersbase.com
Category:            Graphics
Build-type:          Simple
Cabal-version:       >=1.2

Executable haray
  hs-source-dirs: src
  Main-is: Main.hs
  build-depends: base > 3 && < 5
  if impl(ghc >= 7.0.1)
    ghc-prof-options: -rtsopts
  ghc-prof-options: -prof -auto-all
  ghc-options: -O2 -funbox-strict-fields

Library
  -- .hs or .lhs file containing the Main module.
  -- Main-is:             
  hs-source-dirs: src
  
  -- Packages needed in order to build this package.
  Build-depends:       base > 3 && < 5,
                       bytestring == 0.9.*,
                       strict == 0.3.*,
                       zlib == 0.5.*,
                       array >= 0.3 && < 0.5
  
  Exposed-modules:       Data.VectorSpace,
                         Data.OrthoNormalBasis,
                         Data.Camera,
                         Data.Ray,
                         Data.Shape,
                         Data.RGB,
                         Data.Bitmap,
                         Data.Scene,
                         Data.Luminaire,
                         Data.PNG
  if impl(ghc >= 7.0.1)
    ghc-prof-options: -rtsopts
  ghc-prof-options: -prof -auto-all
  ghc-options: -O2 -funbox-strict-fields
  
  -- Extra tools (e.g. alex, hsc2hs, ...) needed to build the source.
  -- Build-tools:         
  
