Name:                haray
Version:             0.1
License:             BSD3
License-file:        LICENSE
Author:              Jason Dagit
Maintainer:          dagitj@gmail.com
Category:            Graphics
Build-type:          Simple
Cabal-version:       >=1.12

Executable haray
  Main-is: Main.hs
  default-language: Haskell2010
  build-depends: haray
               , base > 3 && < 5
  if impl(ghc >= 7.0.1)
    ghc-options: -rtsopts -threaded
  if impl(ghc >= 7.4.1)
    ghc-prof-options: -fprof-auto
  else
    ghc-prof-options: -auto-all
  ghc-prof-options: -prof
  ghc-options: -O2 -funbox-strict-fields -Wall

Library
  hs-source-dirs: src
  default-language: Haskell2010
  
  -- Packages needed in order to build this package.
  Build-depends:       base         > 3 && < 5
                     , strict       == 0.3.*
                     , lin-alg      >= 0.1.0.2
                     , JuicyPixels  < 4
                     , vector       < 1
                     , mwc-random   < 0.13
                     , primitive
                     , deepseq
                     , async
  
  Exposed-modules:     Graphics.Rendering.Haray.Bitmap
                     , Graphics.Rendering.Haray.Camera
                     , Graphics.Rendering.Haray.HitRecord
                     , Graphics.Rendering.Haray.HMDInfo
                     , Graphics.Rendering.Haray.Luminaire
                     , Graphics.Rendering.Haray.Ray
                     , Graphics.Rendering.Haray.Render
                     , Graphics.Rendering.Haray.RGB
                     , Graphics.Rendering.Haray.Scene
                     , Graphics.Rendering.Haray.Shape
                     , Graphics.Rendering.Haray.SolidNoise
                     , Graphics.Rendering.Haray.Texture
  if impl(ghc >= 7.4.1)
    ghc-prof-options: -fprof-auto
  else
    ghc-prof-options: -auto-all
  ghc-prof-options: -prof
  ghc-options: -O2 -funbox-strict-fields -Wall
  
  -- Extra tools (e.g. alex, hsc2hs, ...) needed to build the source.
  -- Build-tools:         
  
