Name:                raytracer
Version:             0.1
License:             BSD3
License-file:        LICENSE
Author:              Jason Dagit
Maintainer:          dagit@codersbase.com
Category:            Graphics
Build-type:          Simple
Cabal-version:       >=1.2

Executable raytracer
  hs-source-dirs: src
  Main-is: Main.hs
  build-depends: base > 3 && < 5

Library
  -- .hs or .lhs file containing the Main module.
  -- Main-is:             
  hs-source-dirs: src
  
  -- Packages needed in order to build this package.
  Build-depends:       base > 3 && < 5,
                       bmp == 1.1.*,
                       bytestring == 0.9.*
  
  Exposed-modules:       Data.VectorSpace,
                         Data.OrthoNormalBasis,
                         Data.Ray,
                         Data.Shape,
                         Data.RGB,
                         Data.Bitmap
  
  -- Extra tools (e.g. alex, hsc2hs, ...) needed to build the source.
  -- Build-tools:         
  
